Finished fixing up the program

--- a/OnichanS debit card/OnichanS debit card.csproj
+++ b/OnichanS debit card/OnichanS debit card.csproj
@@ -85,7 +85,7 @@
     </ItemGroup>
     <ItemGroup>
       <Content Include="icon.ico" />
-      <Content Include="logo.png" />
+      <EmbeddedResource Include="Resources\logo.png" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
